1.添加service层 2.添加thymeleaf

--- a/src/main/resources/templates/thymeleaf/test.html
+++ b/src/main/resources/templates/thymeleaf/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <!--
        test
@@ -13,6 +13,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<div>ssss</div>
+<a href="http://baidu.com">百度</a>
+<div th:text="${id}"></div>
 </body>
 </html>
