--- a/src/main/resources/templates/thymeleaf/common/common_head.html
+++ b/src/main/resources/templates/thymeleaf/common/common_head.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" th:href="@{/static/plugins/font-awesome/css/font-awesome.min.css}" href="../../static/plugins/font-awesome/css/font-awesome.min.css">
     <!-- Ionicons -->
     <!--<link rel="stylesheet" href="../static/plugins/Ionicons/css/ionicons.min.css">-->
-
+    <link rel="stylesheet" th:src="@{/static/css/adminlazy.css}" href="/static/css/adminlazy.css">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -28,6 +28,12 @@
     <![endif]-->
     <!-- jQuery 3 -->
     <script th:src="@{/static/plugins/jquery/js/jquery.min.js}" src="../../static/plugins/jquery/js/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            //解决移动端浏览器300ms延迟
+            FastClick.attach(document.body);
+        });
+    </script>
 </head>
 <body>
 
