--- a/src/main/resources/templates/thymeleaf/common/common_js.html
+++ b/src/main/resources/templates/thymeleaf/common/common_js.html
@@ -14,8 +14,9 @@
 </head>
 <body>
 <div th:fragment="commonJs">
-    <script th:src="@{/static/plugins/bootstrap/js/bootstrap.min.js}" src="../../static/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script th:src="@{/static/js/lazyutil.js?v=1.0}" src="../../static/js/lazyutil.js?v=1.0"></script>
+    <script th:src="@{/static/plugins/fastclick/js/fastclick.js}" src="/static/plugins/fastclick/js/fastclick.js"></script>
+    <script th:src="@{/static/plugins/bootstrap/js/bootstrap.min.js}" src="/static/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script th:src="@{/static/js/util/lazyutil.js?v=1.0}" src="/static/js/util/lazyutil.js?v=1.0"></script>
 </div>
 </body>
 </html>
