首页添加服务器和应用基本信息页面

--- a/src/main/resources/templates/thymeleaf/index/index.html
+++ b/src/main/resources/templates/thymeleaf/index/index.html
@@ -629,12 +629,12 @@
 </script>
 <div th:include="common/common_js :: commonJs"></div>
 <!-- AdminLazy App -->
-<script th:src="@{/static/js/pages/index/adminlazy.js?v=1.0}" src="../../../static/js/pages/index/adminlazy.js?v=1.0"></script>
+<!--<script th:src="@{/static/js/pages/adminlazy.js?v=1.0}" src="../../../static/js/pages/adminlazy.js?v=1.0"></script>-->
 <!-- AdminLazy dashboard demo (This is only for demo purposes) -->
 <!--<script src="../static/js/pages/dashboard.js"></script>-->
 <!-- AdminLazy for demo purposes -->
-<script th:src="@{/static/js/pages/index/index.js?v=1.1}" src="../../../static/js/pages/index/index.js?v=1.1"></script>
-<script th:src="@{/static/js/pages/index/indextab.js?v=1.0}" src="../../../static/js/pages/index/indextab.js?v=1.0"></script>
+<script th:src="@{/static/js/pages/index/index.js?v=1.2}" src="/static/js/pages/index/index.js?v=1.1"></script>
+<script th:src="@{/static/js/pages/index/indextab.js?v=1.0}" src="/static/js/pages/index/indextab.js?v=1.0"></script>
 
 </body>
 </html>
