--- a/src/main/resources/static/css/adminlazy.css
+++ b/src/main/resources/static/css/adminlazy.css
@@ -166,7 +166,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Microsoft YaHei','Source Sans Pro', sans-serif;
 }
 /* General Links */
 a {
@@ -294,11 +294,11 @@ a:focus {
   display: block;
   float: left;
   height: 50px;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 50px;
   text-align: center;
   width: 230px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Microsoft YaHei',"Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 0 15px;
   font-weight: 300;
   overflow: hidden;
@@ -318,7 +318,7 @@ a:focus {
 }
 .content-header > h1 {
   margin: 0;
-  font-size: 24px;
+  font-size: 22px;
 }
 .content-header > h1 > small {
   font-size: 15px;
@@ -428,7 +428,7 @@ a:focus {
   -moz-transition: -moz-transform 0.3s ease-in-out, width 0.3s ease-in-out;
   -o-transition: -o-transform 0.3s ease-in-out, width 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out, width 0.3s ease-in-out;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Microsoft YaHei','Source Sans Pro', sans-serif;
 }
 @media (max-width: 767px) {
   .main-sidebar {
@@ -754,7 +754,7 @@ a:focus {
   border-bottom: 1px solid transparent;
 }
 .nav-tabs.control-sidebar-tabs > li > a .icon {
-  font-size: 16px;
+  font-size: 14px;
 }
 .nav-tabs.control-sidebar-tabs > li.active > a,
 .nav-tabs.control-sidebar-tabs > li.active > a:hover,
@@ -774,7 +774,7 @@ a:focus {
 }
 .control-sidebar-heading {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   padding: 10px 0;
   margin-bottom: 10px;
 }
