--- a/src/main/resources/templates/thymeleaf/common/common_head.html
+++ b/src/main/resources/templates/thymeleaf/common/common_head.html
@@ -15,19 +15,19 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" th:href="@{/static/plugins/bootstrap/css/bootstrap.min.css}" href="../../static/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/static/plugins/bootstrap/css/bootstrap.min.css}" href="/static/plugins/bootstrap/css/bootstrap.min.css">
     <!-- Font Awesome -->
-    <link rel="stylesheet" th:href="@{/static/plugins/font-awesome/css/font-awesome.min.css}" href="../../static/plugins/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" th:href="@{/static/plugins/font-awesome/css/font-awesome.min.css}" href="/static/plugins/font-awesome/css/font-awesome.min.css">
     <!-- Ionicons -->
     <!--<link rel="stylesheet" href="../static/plugins/Ionicons/css/ionicons.min.css">-->
-    <link rel="stylesheet" th:src="@{/static/css/adminlazy.css}" href="/static/css/adminlazy.css">
+    <link rel="stylesheet" th:href="@{/static/css/adminlazy.css?v=1.0}" href="/static/css/adminlazy.css?v=1.0">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- jQuery 3 -->
-    <script th:src="@{/static/plugins/jquery/js/jquery.min.js}" src="../../static/plugins/jquery/js/jquery.min.js"></script>
+    <script th:src="@{/static/plugins/jquery/js/jquery.min.js}" src="/static/plugins/jquery/js/jquery.min.js"></script>
     <script type="text/javascript">
         $(function () {
             //解决移动端浏览器300ms延迟
