--- a/src/main/resources/templates/thymeleaf/common/common_js.html
+++ b/src/main/resources/templates/thymeleaf/common/common_js.html
@@ -16,6 +16,7 @@
 <div th:fragment="commonJs">
     <script th:src="@{/static/plugins/fastclick/js/fastclick.js}" src="/static/plugins/fastclick/js/fastclick.js"></script>
     <script th:src="@{/static/plugins/bootstrap/js/bootstrap.min.js}" src="/static/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script th:src="@{/static/js/pages/adminlazy.js?v=1.0}" src="/static/js/pages/adminlazy.js?v=1.0"></script>
     <script th:src="@{/static/js/util/lazyutil.js?v=1.0}" src="/static/js/util/lazyutil.js?v=1.0"></script>
 </div>
 </body>
