--- a/src/main/resources/templates/thymeleaf/index/home.html
+++ b/src/main/resources/templates/thymeleaf/index/home.html
@@ -1,31 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head th:include="common/common_head :: commonHead('HOME')">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Flot Charts</title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="../../bower_components/font-awesome/css/font-awesome.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="../../bower_components/Ionicons/css/ionicons.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="../../dist/css/AdminLTE.css">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-         folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div>
@@ -35,8 +10,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
         <h1>
-            Flot Charts
-            <small>preview sample</small>
+            系统运行状态
+            <small>详细信息</small>
         </h1>
         <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
@@ -47,6 +22,247 @@
 
     <!-- Main content -->
     <section class="content">
+        <!--系统基本信息-->
+        <div class="row">
+            <!--OS信息-->
+            <div class="col-md-6">
+                <!-- Line chart -->
+                <div class="box box-primary">
+                    <div class="box-header with-border">
+                        <i class="fa fa-bar-chart-o"></i>
+
+                        <h3 class="box-title">系统信息</h3>
+
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        </div>
+                    </div>
+                    <!--<div class="box-body">-->
+                    <!--<div id="line-chart3" style="height: 300px;"></div>-->
+                    <!--</div>-->
+                    <div class="box-body table-responsive no-padding">
+                        <table class="table table-hover">
+                            <tbody>
+                            <!--<tr>-->
+                            <!--<th>ID</th>-->
+                            <!--<th>User</th>-->
+                            <!--<th>Date</th>-->
+                            <!--<th>Status</th>-->
+                            <!--<th>Reason</th>-->
+                            <!--</tr>-->
+                            <tr>
+                                <td width="20%">当前用户：</td>
+                                <td th:text="${systemInfo.getUserName()}">Root</td>
+                            </tr>
+                            <tr>
+                                <td>服务器名称：</td>
+                                <td th:text="${systemInfo.getServerName()}">服务器1</td>
+                            </tr>
+                            <!--<tr>-->
+                                <!--<td>Domain：</td>-->
+                                <!--<td th:text="${systemInfo.getDomain()}">net</td>-->
+                            <!--</tr>-->
+                            <tr>
+                                <td>网卡：</td>
+                                <td th:text="${systemInfo.getNetName()}">eth0</td>
+                            </tr>
+
+                            <tr>
+                                <td>Mac：</td>
+                                <td th:text="${systemInfo.getMac()}">xx:xx:xx:xx:xx:xx</td>
+                            </tr>
+                            <tr>
+                                <td>IP：</td>
+                                <td th:text="${systemInfo.getIp()}">127.0.0.1</td>
+                            </tr>
+                            <tr>
+                                <td>Host：</td>
+                                <td th:text="${systemInfo.getHost()}">127.0.0.1</td>
+                            </tr>
+                            <tr>
+                                <td>OsArch：</td>
+                                <td th:text="${systemInfo.getOsArch()}">amd64</td>
+                            </tr>
+                            <tr>
+                                <td>OsName：</td>
+                                <td th:text="${systemInfo.getOsName()}">Windows 10</td>
+                            </tr>
+                            <tr>
+                                <td>OsVersion：</td>
+                                <td th:text="${systemInfo.getOsVersion()}">10.0</td>
+                            </tr>
+                            <tr>
+                                <td>CpuMHZ：</td>
+                                <td th:text="${systemInfo.getCpuMhz()}">2494</td>
+                            </tr>
+                            <tr>
+                                <td>CpuVendor：</td>
+                                <td th:text="${systemInfo.getCpuVendor()}">Intel</td>
+                            </tr>
+                            <tr>
+                                <td>CpuModel：</td>
+                                <td th:text="${systemInfo.getCpuModel()}">Core(TM) i7-4710MQ CPU @ 2.50GHz</td>
+                            </tr> <tr>
+                                <td>CpuCacheSize：</td>
+                                <td th:text="${systemInfo.getCpuCacheSize()}">4086</td>
+                            </tr>
+                            </tr> <tr>
+                                <td>Mem：</td>
+                                <td th:text="${systemInfo.getMemTotal()+'M'}">4086M</td>
+                            </tr>
+
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.box-body-->
+                </div>
+                <!-- /.box -->
+            </div>
+            <!--JVM信息-->
+            <div class="col-md-6">
+                <!-- Line chart -->
+                <div class="box box-primary">
+                    <div class="box-header with-border">
+                        <i class="fa fa-bar-chart-o"></i>
+
+                        <h3 class="box-title">应用环境基本信息</h3>
+
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        </div>
+                    </div>
+                    <!--<div class="box-body">-->
+                        <!--<div id="line-chart4" style="height: 300px;"></div>-->
+                    <!--</div>-->
+                    <div class="box-body table-responsive no-padding">
+                        <table class="table table-hover">
+                            <tbody>
+                            <!--<tr>-->
+                            <!--<th>ID</th>-->
+                            <!--<th>User</th>-->
+                            <!--<th>Date</th>-->
+                            <!--<th>Status</th>-->
+                            <!--<th>Reason</th>-->
+                            <!--</tr>-->
+                            <tr>
+                                <td width="30%">Xmx：</td>
+                                <td th:text="${systemInfo.getJvmXmx()+'M'}">1024M</td>
+                            </tr>
+                            <tr>
+                                <td>Xms：</td>
+                                <td th:text="${systemInfo.getJvmXms()+'M'}">1024M</td>
+                            </tr>
+                            <tr>
+                                <td>Xmn：</td>
+                                <td th:text="${systemInfo.getJvmXmn()+'M'}">128M</td>
+                            </tr>
+                            <tr>
+                                <td>jvm可用处理器个数：</td>
+                                <td th:text="${systemInfo.getJvmAvailableProcessors()}">4</td>
+                            </tr>
+
+                            <tr>
+                                <td>jvm版本：</td>
+                                <td th:text="${systemInfo.getJvmVersion()}">1.8.151</td>
+                            </tr>
+                            <tr>
+                                <td>jvmHome：</td>
+                                <td th:text="${systemInfo.getJvmHome()}">C:/java/jdk</td>
+                            </tr><tr>
+                                <td>应用位置：</td>
+                                <td th:text="${systemInfo.getJvmAppHome()}">C:/app</td>
+                            </tr>
+                            <tr>
+                                <td>Class Version：</td>
+                                <td th:text="${systemInfo.getJvmClassVersion()}">52.0</td>
+                            </tr>
+
+
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.box-body-->
+                </div>
+                <div class="box box-primary">
+                    <div class="box-header with-border">
+                        <i class="fa fa-bar-chart-o"></i>
+
+                        <h3 class="box-title">主数据库信息</h3>
+
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        </div>
+                    </div>
+                    <!--<div class="box-body">-->
+                    <!--<div id="line-chart4" style="height: 300px;"></div>-->
+                    <!--</div>-->
+                    <div class="box-body table-responsive no-padding">
+                        <table class="table table-hover">
+                            <tbody>
+                            <!--<tr>-->
+                            <!--<th>ID</th>-->
+                            <!--<th>User</th>-->
+                            <!--<th>Date</th>-->
+                            <!--<th>Status</th>-->
+                            <!--<th>Reason</th>-->
+                            <!--</tr>-->
+                            <tr>
+                                <td width="30%">数据库类型：</td>
+                                <td th:text="${mainDataSourceInfo.getDatabase()}">ORACLE</td>
+                            </tr>
+                            <tr>
+                                <td>数据库版本：</td>
+                                <td th:text="${mainDataSourceInfo.getVersion()}">11.2</td>
+                            </tr>
+                            <tr>
+                                <td>驱动类型：</td>
+                                <td th:text="${mainDataSourceInfo.getDriver()}">jdbc</td>
+                            </tr>
+                            <tr>
+                                <td>驱动版本：</td>
+                                <td th:text="${mainDataSourceInfo.getDriverVersion()}">11.2</td>
+                            </tr>
+
+                            <tr>
+                                <td>连接url：</td>
+                                <td th:text="${mainDataSourceInfo.getUrl()}">jdbc:///ssss</td>
+                            </tr>
+                            <tr>
+                                <td>连接用户：</td>
+                                <td th:text="${mainDataSourceInfo.getUsername()}">root</td>
+                            </tr>
+
+                            <tr>
+                                <td>数据源类型：</td>
+                                <td th:text="${mainDataSourceInfo.getType()}">druid</td>
+                            </tr>
+                            <tr>
+                                <td>最小连接数：</td>
+                                <td th:text="${mainDataSourceInfo.getMinIdle()}">10</td>
+                            </tr>
+                            <tr>
+                                <td>最大连接数：</td>
+                                <td th:text="${mainDataSourceInfo.getMaxActive()}">100</td>
+                            </tr>
+
+
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.box-body-->
+                </div>
+                <!-- /.box -->
+            </div>
+        </div>
         <div class="row">
             <div class="col-xs-12">
                 <!-- interactive chart -->
@@ -97,13 +313,14 @@
                     <!-- /.box-body-->
                 </div>
                 <!-- /.box -->
-
-                <!-- Area chart -->
+            </div>
+            <div class="col-md-6">
+                <!-- Line chart -->
                 <div class="box box-primary">
                     <div class="box-header with-border">
                         <i class="fa fa-bar-chart-o"></i>
 
-                        <h3 class="box-title">Full Width Area Chart</h3>
+                        <h3 class="box-title">Line Chart</h3>
 
                         <div class="box-tools pull-right">
                             <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -112,18 +329,14 @@
                         </div>
                     </div>
                     <div class="box-body">
-                        <div id="area-chart" style="height: 338px;" class="full-width-chart"></div>
+                        <div id="line-chart2" style="height: 300px;"></div>
                     </div>
                     <!-- /.box-body-->
                 </div>
                 <!-- /.box -->
-
             </div>
-            <!-- /.col -->
-
-
-            <!-- /.col -->
         </div>
+
         <!-- /.row -->
     </section>
     <!-- /.content -->
@@ -145,7 +358,7 @@
 
 
 <script th:src="@{/static/plugins/echarts/echarts.min.js}" src="/static/plugins/echarts/echarts.min.js"></script>
-<script th:src="@{/static/js/pages/index/home.js}" src="/static/js/pages/index/home.js"></script>
+<script th:src="@{/static/js/pages/index/home.js?v=1.0}" src="/static/js/pages/index/home.js?v=1.0"></script>
 <script>
 
 </script>
