继续学习使用layui

--- a/src/main/resources/templates/thymeleaf/common/common_head_fixed.html
+++ b/src/main/resources/templates/thymeleaf/common/common_head_fixed.html
@@ -12,6 +12,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title th:text="${title}">AdminLazy v3.0.0 | 控制面板</title>
+    <link rel="icon" th:href="@{/static/favicon.ico}" href="/static/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" th:href="@{/static/favicon.ico}" href="/static/favicon.ico" type="image/x-icon"/>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.7 -->
@@ -40,11 +42,11 @@
         var layform, laytable;
 
         $(function () {
-            layui.use(['form', 'table'], function () {
-
-                layform = layui.form;
-                laytable = layui.table;
-            });
+            // layui.use(['form', 'table'], function () {
+            //
+            //     layform = layui.form;
+            //     laytable = layui.table;
+            // });
 
             //解决移动端浏览器300ms延迟
             FastClick.attach(document.body);
