--- a/src/main/resources/templates/thymeleaf/login/login.html
+++ b/src/main/resources/templates/thymeleaf/login/login.html
@@ -13,6 +13,8 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" th:href="@{/static/favicon.ico}" href="/static/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" th:href="@{/static/favicon.ico}" href="/static/favicon.ico" type="image/x-icon"/>
     <title>用户登录</title>
     <link rel="stylesheet" type="text/css" th:href="@{/static/login/css/normalize.css}" href="/static/login/css/normalize.css"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/login/css/demo.css}" href="/static/login/css/demo.css"/>
