--- a/src/main/resources/templates/thymeleaf/menu/menu.html
+++ b/src/main/resources/templates/thymeleaf/menu/menu.html
@@ -27,33 +27,6 @@
         <div class="row">
             <div class="col-xs-12">
                 <div id="demo"></div>
-                <!-- interactive chart -->
-                <!--<div class="box box-primary">-->
-                    <!--<div class="box-header with-border">-->
-                        <!--<i class="fa fa-bar-chart-o"></i>-->
-
-                        <!--<h3 class="box-title">Interactive Area Chart</h3>-->
-
-                        <!--<div class="box-tools pull-right">-->
-                            <!--<button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>-->
-                            <!--<button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>-->
-                        <!--</div>-->
-                        <!--&lt;!&ndash;<div class="box-tools pull-right">&ndash;&gt;-->
-                        <!--&lt;!&ndash;Real time&ndash;&gt;-->
-                        <!--&lt;!&ndash;<div class="btn-group" id="realtime" data-toggle="btn-toggle">&ndash;&gt;-->
-                        <!--&lt;!&ndash;<button type="button" class="btn btn-default btn-xs active" data-toggle="on">On</button>&ndash;&gt;-->
-                        <!--&lt;!&ndash;<button type="button" class="btn btn-default btn-xs" data-toggle="off">Off</button>&ndash;&gt;-->
-                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                    <!--</div>-->
-                    <!--<div class="box-body">-->
-                        <!--&lt;!&ndash;<div id="interactive" style="height: 300px;"></div>&ndash;&gt;-->
-                        <!--<div id="demo"></div>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash; /.box-body&ndash;&gt;-->
-                <!--</div>-->
-                <!-- /.box -->
-
             </div>
             <!-- /.col -->
         </div>
@@ -76,12 +49,29 @@
 <!-- ./wrapper -->
 <div th:include="common/common_js :: commonJs"></div>
 
+<script type="text/html" id="publics">
+    <!-- 这里的 checked 的状态只是演示 -->
+    <input type="checkbox" name="publics" value="{{d.publics}}" lay-skin="switch" lay-text="是|否" lay-filter="publics" {{ d.publics== 0 ? 'checked' : '' }}>
+</script>
 
-<!--<script th:src="@{/static/plugins/echarts/echarts.min.js}" src="/static/plugins/echarts/echarts.min.js"></script>-->
-<!--<script th:src="@{/static/js/pages/index/home.js?v=1.0}" src="/static/js/pages/index/home.js?v=1.0"></script>-->
+<script type="text/html" id="allowEdit">
+    <!-- 这里的 checked 的状态只是演示 -->
+    <input type="checkbox" name="allowEdit" value="{{d.allowEdit}}" lay-skin="switch" lay-text="是|否" lay-filter="allowEdit" {{ d.allowEdit== 0 ? 'checked' : '' }}>
+</script>
+
+<script type="text/html" id="allowDelete">
+    <!-- 这里的 checked 的状态只是演示 -->
+    <input type="checkbox" name="allowDelete" value="{{d.allowDelete}}" lay-skin="switch" lay-text="是|否" lay-filter="allowDelete" {{d.allowDelete== 0 ? 'checked' : '' }}>
+</script>
+<script type="text/html" id="status">
+    <!-- 这里的 checked 的状态只是演示 -->
+    <input type="checkbox" name="status" value="{{d.status}}" title="锁定" lay-filter="status" {{d.status!= 0 ? 'checked' : '' }}>
+</script>
+
 <script type="text/javascript">
     layui.use('table', function () {
-        var table = layui.table;
+        var table = layui.table, form = layui.form;
+        ;
 
         //第一个实例
         table.render({
@@ -92,20 +82,51 @@
             , page: {page: true,} //开启分页
             , cols: [
                 [
-                    {field: 'id', title: 'ID', width: 80, sort: true, fixed: 'left'}
+                    {type: 'checkbox'}
+                    , {field: 'id', title: 'ID', width: 80, sort: true}
                     , {field: 'name', title: '名称', width: 80}
                     , {field: 'enName', title: '英文名称', width: 80, sort: true}
                     , {field: 'parentId', title: '父菜单', width: 80}
                     , {field: 'icon', title: '图标', width: 80}
                     , {field: 'url', title: 'URL', width: 80, sort: true}
                     , {field: 'target', title: '打开方式', width: 80, sort: true}
-                    , {field: 'publics', title: '是否公开', width: 80}
-                    , {field: 'allowEdit', title: '是否可编辑', width: 135, sort: true}
-                    , {field: 'allowDelete', title: '是否可删除', width: 135, sort: true}
+                    , {field: 'publics', title: '是否公开', width: 80, sort: true, templet: '#publics', unresize: true}
+                    , {field: 'allowEdit', title: '是否可编辑', width: 135, sort: true, templet: '#allowEdit', unresize: true}
                     , {field: 'ordernum', title: '排序', width: 80, sort: true}
-                    , {field: 'description', title: '描述', width: 135, sort: true}
+                    , {field: 'description', title: '描述', width: 100, sort: true}
+                    , {field: 'allowDelete', title: '是否可删除', width: 110, sort: true, templet: '#allowDelete', unresize: true}
+                    , {field: 'status', title: '是否锁定', width: 110, sort: true, templet: '#status', unresize: true}
+                    // , {field: 'sex', title: '性别', width: 85, templet: '#switchTpl', unresize: true}
+                    // , {field: 'lock', title: '是否锁定', width: 110, templet: '#checkboxTpl', unresize: true}
                 ]
             ]
+        });
+
+        form.on('switch(publics)', function (obj) {
+            $.ajax({
+                type: 'get',
+                dataType: 'json',
+                url: url,
+                data: {},
+                cache: false,
+                async: false,
+                success: function (menus) {
+                    data = menus;
+                }
+            });
+            layer.tips(this.value + ' ' + this.name + '：' + obj.elem.checked, obj.othis);
+        });
+        form.on('switch(allowEdit)', function (obj) {
+            layer.tips(obj.data+ '  aaaa  ' + this.name + '：' + obj.elem.checked, obj.othis);
+            console.log(obj.data);
+        });
+        form.on('switch(allowDelete)', function (obj) {
+            layer.tips(this.value + ' ' + this.name + '：' + obj.elem.checked, obj.othis);
+        });
+
+        //监听锁定操作
+        form.on('checkbox(status)', function (obj) {
+            layer.tips(this.value + ' ' + this.name + '：' + obj.elem.checked, obj.othis);
         });
 
     });
