--- a/src/main/resources/templates/thymeleaf/index/home.html
+++ b/src/main/resources/templates/thymeleaf/index/home.html
@@ -54,7 +54,7 @@
                             <!--</tr>-->
                             <tr>
                                 <td width="20%">当前用户：</td>
-                                <td th:text="${systemInfo.getUserName()}">Root</td>
+                                <td th:text="${systemInfo.getUsername()}">Root</td>
                             </tr>
                             <tr>
                                 <td>服务器名称：</td>
