继续添加菜单的功能项

--- a/src/main/resources/templates/thymeleaf/common/common_head.html
+++ b/src/main/resources/templates/thymeleaf/common/common_head.html
@@ -11,7 +11,7 @@
     -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" th:href="@{/static/favicon.ico}" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="icon" th:href="@{/static/favicon.ico}" href="/static/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" th:href="@{/static/favicon.ico}" href="/static/favicon.ico" type="image/x-icon"/>
     <title th:text="${title}">AdminLazy v3.0.0 | 控制面板</title>
     <!-- Tell the browser to be responsive to screen width -->
@@ -40,14 +40,17 @@
 
         //layui组件
         var layform, laytable;
-        layer.load();
-        window.onload = function closeLayer() {
-            // console.log("加载完成");
-            layer.closeAll("loading");
-        };
-        setTimeout(function(){
-            layer.closeAll('loading');
-        }, 5000);
+        // var layerIndex=layer.load(0, {time: 5*1000});
+        // window.onload = function closeLayer() {
+        //     // console.log("加载完成");
+        //     layer.closeAll("loading");
+        // };
+        // $(window).load(function () {
+        //     layer.closeAll("loading");
+        // });
+        // setTimeout(function () {
+        //     layer.closeAll('loading');
+        // }, 5000);
         $(function () {
             // layui.use(['form', 'table'], function () {
             //
