--- a/src/main/resources/templates/thymeleaf/common/common_js.html
+++ b/src/main/resources/templates/thymeleaf/common/common_js.html
@@ -19,6 +19,22 @@
     <script th:src="@{/static/js/pages/adminlazy.js?v=1.0}" src="/static/js/pages/adminlazy.js?v=1.0"></script>
     <script th:src="@{/static/js/util/lazyutil.js?v=1.0}" src="/static/js/util/lazyutil.js?v=1.0"></script>
     <script th:src="@{/static/plugins/layui/layui.js}" src="/static/plugins/layui/layui.js"></script>
+    <script type="text/javascript">
+        // window.onload = function closeLayer() {
+        //     console.log("加载完成1");
+        //     var index = parent.layer.getFrameIndex(window.name);
+        //     parent.layer.close(index);
+        //     index = parent.layer.getFrameIndex(window.name);
+        //     parent.layer.close(index);
+        // };
+        // $(document).ready(function () {
+        //
+        //     console.log("加载完成2");
+        //     layer.closeAll("loading");
+        //
+        // });
+    </script>
 </div>
+
 </body>
 </html>
