--- a/src/main/resources/templates/thymeleaf/menu/menuDetail.html
+++ b/src/main/resources/templates/thymeleaf/menu/menuDetail.html
@@ -24,60 +24,39 @@
     <section class="content">
         <!--menu列表-->
 
-        <div class="row">
-            <div class="col-xs-12">
-
-                <div class="layui-form-item">
-                    <label class="layui-form-label">单行输入框</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input">
-                    </div>
+        <!--<div class="row">-->
+        <!--<div class="col-xs-12">-->
+        <form class="form-horizontal">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-6 control-label">Email</label>
+                <div class="col-sm-6">
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
                 </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">验证必填项</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="username" lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
-                    </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                 </div>
-
-                <div class="layui-form-item">
-                    <div class="layui-inline">
-                        <label class="layui-form-label">验证手机</label>
-                        <div class="layui-input-inline">
-                            <input type="tel" name="phone" lay-verify="required|phone" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">验证邮箱</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="email" lay-verify="email" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="layui-form-item">
-                    <div class="layui-inline">
-                        <label class="layui-form-label">多规则验证</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="number" lay-verify="required|number" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">验证日期</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">验证链接</label>
-                        <div class="layui-input-inline">
-                            <input type="tel" name="url" lay-verify="url" autocomplete="off" class="layui-input">
-                        </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Remember me
+                        </label>
                     </div>
                 </div>
             </div>
-            <!-- /.col -->
-        </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Sign in</button>
+                </div>
+            </div>
+        </form>
+        <!--</div>-->
+        <!--&lt;!&ndash; /.col &ndash;&gt;-->
+        <!--</div>-->
 
     </section>
 </div>
