--- a/src/main/resources/templates/thymeleaf/menu/menuEdit.html
+++ b/src/main/resources/templates/thymeleaf/menu/menuEdit.html
@@ -26,62 +26,95 @@
 
         <!--<div class="row">-->
         <!--<div class="col-xs-12">-->
-        <form class="form-horizontal" th:action="@{/menu}" method="put">
+        <form class="form-horizontal" id="menu" th:action="@{/menu}" method="post">
+            <input type="hidden" name="_method" th:value="put">
             <div class="form-group">
-                <label for="id" class="col-sm-4 control-label">ID</label>
-                <div class="col-sm-8">
-                    <input type="email" class="form-control" id="id" placeholder="ID" readonly th:value="${menu.id}">
+                <label for="id" class="col-sm-2 control-label">ID</label>
+                <div class="col-sm-10">
+                    <input name="id" class="form-control" id="id" placeholder="ID" readonly th:value="${menu.id}">
                 </div>
             </div>
             <div class="form-group">
-                <label for="name" class="col-sm-4 control-label">Name</label>
-                <div class="col-sm-8">
-                    <input class="form-control" id="name" placeholder="Name" th:value="${menu.name}">
+                <label for="name" class="col-sm-2 control-label">Name</label>
+                <div class="col-sm-10">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Name" th:value="${menu.name}">
                 </div>
             </div>
             <div class="form-group">
-                <label for="enname" class="col-sm-4 control-label">EN Name</label>
-                <div class="col-sm-8">
-                    <input class="form-control" id="enname" placeholder="EN Name" th:value="${menu.enName}">
+                <label for="enname" class="col-sm-2 control-label">EN Name</label>
+                <div class="col-sm-10">
+                    <input type="text" name="enName" class="form-control" id="enname" placeholder="EN Name" th:value="${menu.enName}">
                 </div>
             </div>
             <div class="form-group">
-                <label for="Parent" class="col-sm-4 control-label">Parent</label>
-                <div class="col-sm-8">
-                    <input class="form-control" id="Parent" placeholder="Parent" th:value="${menu.parentId}">
+                <label for="parentId" class="col-sm-2 control-label">Parent</label>
+                <div class="col-sm-10">
+                    <input type="text" name="parentId" class="form-control" id="parentId" placeholder="parentId" th:value="${menu.parentId}">
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Icon</label>
-                <div class="col-sm-8">
-                    <i style="font-size: 22px" th:class="${menu.icon}"></i>
+                <label class="col-sm-2 control-label">Icon</label>
+                <div class="col-sm-10">
+                    <input type="text" name="icon" class="form-control" id="icon" placeholder="Parent" th:value="${menu.icon}">
                 </div>
             </div>
             <div class="form-group" th:inline="text">
-                <label class="col-sm-4 control-label">URL</label>
-                <div class="col-sm-8">
-                    <input class="form-control" id="url" placeholder="URL" th:value="${menu.url}">
+                <label class="col-sm-2 control-label">URL</label>
+                <div class="col-sm-10">
+                    <input type="text" name="url" class="form-control" id="url" placeholder="URL" th:value="${menu.url}">
                     <!--<a href="" target="_blank" th:href="@{${menu.url}}">[[${menu.url}]]　　点击预览</a>-->
                 </div>
             </div>
             <div class="form-group">
-                <label for="disalble" class="col-sm-4 control-label">是否禁用</label>
-                <div class="col-sm-8">
+                <label for="disalble" class="col-sm-2 control-label">是否禁用</label>
+                <div class="col-sm-10">
                     <!--<input type="email" class="form-control" id="Parent" placeholder="Email" readonly th:value="${menu.parentId}">-->
-                    <select id="disalble" class="form-control">
+                    <select id="disalble" class="form-control" name="status">
                         <option value="1" th:selected="${menu.status==1}">禁用</option>
                         <option value="0" th:selected="${menu.status==0}">正常</option>
                     </select>
                 </div>
             </div>
-            <input type="submit" value="提交" class="submit">
+            <div class="form-group">
+                <label class="col-sm-2 control-label">ordernum</label>
+                <div class="col-sm-10">
+                    <input type="number" name="ordernum" class="form-control" id="ordernum" placeholder="orderNum" th:value="${menu.ordernum}">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button id="submit" type="button" class="btn btn-primary">修改</button>
+                </div>
+            </div>
         </form>
-        <!--</div>-->
-        <!--&lt;!&ndash; /.col &ndash;&gt;-->
-        <!--</div>-->
+
 
     </section>
 </div>
+<script type="text/javascript">
+    $("#submit").click(function () {
+        layer.load();
+        $.ajax({
+            //几个参数需要注意一下
+            type: "put",//方法类型
+            dataType: "json",//预期服务器返回的数据类型
+            url: ctx + "/menu",//url
+            data: $('#menu').serialize(),
+            success: function (result) {
+                console.log(result);//打印服务端返回的数据(调试用)
+                if (result.status == 0) {
+                    layer.closeAll();
+                    layer.msg("更新成功");
+                    parent.table.reload("menu", {});
+                    window.location.href=ctx+"/menu/view/"+$("#id").val();
+                }
+            },
+            error: function () {
+                alert("异常！");
+            }
+        });
+    });
+</script>
 
 <!-- ./wrapper -->
 <div th:include="common/common_js :: commonJs"></div>
