--- a/src/main/resources/templates/thymeleaf/menu/menuView.html
+++ b/src/main/resources/templates/thymeleaf/menu/menuView.html
@@ -74,6 +74,12 @@
                     </select>
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">orderNum</label>
+                <div class="col-sm-10">
+                    <input type="number" name="ordernum" class="form-control" id="ordernum" placeholder="ordernum" th:value="${menu.ordernum}" readonly>
+                </div>
+            </div>
         </form>
         <!--</div>-->
         <!--&lt;!&ndash; /.col &ndash;&gt;-->
