搞个浏览框玩玩

--- a/src/main/resources/templates/thymeleaf/icon/icon.html
+++ b/src/main/resources/templates/thymeleaf/icon/icon.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
-<head th:include="common/common_head :: commonHead('ICON')">
+<head th:include="commons/common_head :: commonHead('ICON')">
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div>
@@ -1045,7 +1045,7 @@
 </div>
 
 <!-- ./wrapper -->
-<div th:include="common/common_js :: commonJs"></div>
+<div th:include="commons/common_js :: commonJs"></div>
 
 
 </body>
