--- a/src/main/resources/templates/thymeleaf/index/index.html
+++ b/src/main/resources/templates/thymeleaf/index/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:include="common/common_head :: commonHead('首页')">
+<head th:include="commons/common_head :: commonHead('首页')">
 </head>
 <!-- Theme style -->
 <!--<link rel="stylesheet" th:href="@{/static/css/adminlazy.css}" href="../../static/css/adminlazy.css">-->
@@ -69,7 +69,7 @@
 <script>
 
 </script>
-<div th:include="common/common_js :: commonJs"></div>
+<div th:include="commons/common_js :: commonJs"></div>
 <!-- AdminLazy App -->
 <!--<script th:src="@{/static/js/pages/adminlazy.js?v=1.0}" src="/static/js/pages/adminlazy.js?v=1.0"></script>-->
 <!-- AdminLazy dashboard demo (This is only for demo purposes) -->
