继续完善menu菜单

--- a/src/main/resources/templates/thymeleaf/commons/common_js.html
+++ b/src/main/resources/templates/thymeleaf/commons/common_js.html
@@ -16,8 +16,8 @@
 <div th:fragment="commonJs">
     <script th:src="@{/static/plugins/fastclick/js/fastclick.js}" src="/static/plugins/fastclick/js/fastclick.js"></script>
     <script th:src="@{/static/plugins/bootstrap/js/bootstrap.min.js}" src="/static/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script th:src="@{/static/js/pages/adminlazy.js?v=1.0}" src="/static/js/pages/adminlazy.js?v=1.0"></script>
-    <script th:src="@{/static/js/util/lazyutil.js?v=1.0}" src="/static/js/util/lazyutil.js?v=1.0"></script>
+    <script th:src="@{/static/js/pages/adminlazy.js(v=1.0)}" src="/static/js/pages/adminlazy.js?v=1.0"></script>
+    <script th:src="@{/static/js/util/lazyutil.js(v=1.0)}" src="/static/js/util/lazyutil.js?v=1.0"></script>
     <script th:src="@{/static/plugins/layui/layui.js}" src="/static/plugins/layui/layui.js"></script>
     <script type="text/javascript">
         // window.onload = function closeLayer() {
