--- a/src/main/resources/templates/thymeleaf/menu/menuEdit.html
+++ b/src/main/resources/templates/thymeleaf/menu/menuEdit.html
@@ -21,7 +21,7 @@
     </section>
 
     <!-- Main content -->
-    <section class="content">
+    <section class="content" th:inline="text">
         <!--menu列表-->
 
         <!--<div class="row">-->
@@ -49,16 +49,61 @@
             <div class="form-group">
                 <label for="parentId" class="col-sm-2 control-label">Parent</label>
                 <div class="col-sm-10">
-                    <span type="text" class="form-control" id="parentId_span" placeholder="parentId_span" th:value="${menu.parentId}">
+                    <span type="text" class="form-control" id="parentId_span" placeholder="parentId_span" th:value="${menu.parentId}"></span>
                     <input type="hidden" name="parentId" class="form-control" id="parentId" placeholder="parentId" th:value="${menu.parentId}">
                 </div>
             </div>
+            <style>
+                .selectInput {
+                    padding: 5px 8px;
+                    border: 1px solid #ddd;
+                }
+
+                .selectInput:empty::before {
+                    content: attr(placeholder);
+                }
+
+                .selectInputA {
+                    cursor: pointer;
+                }
+
+                .selectInputRemove {
+                    visibility: hidden;
+                }
+
+                .selectInputRemove:hover {
+                    visibility: visible;
+                }
+            </style>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Icon</label>
                 <div class="col-sm-10">
-                    <input type="text" name="icon" class="form-control" id="icon" placeholder="Parent" th:value="${menu.icon}">
+                    <span style="display: inline;float: left;position:relative;">
+                        <span style="float: left;">
+                            <input width="80%" type="text" name="icon" style="display:inline;float: left" class="form-control" id="icon" placeholder="icon" th:value="${menu.icon}">
+                        </span>
+                        <!--<span width="20%" style="display:inline;float: left">-->
+                        <span>
+                            <a style="display: inline;float: left; position: absolute; top: 50%; transform: translateY(-50%);margin-left: 10px" onclick="openView(ctx+'/icon');return;" class="fa fa-search"></a>
+                        </span>
+                    </span>
+                    <!--</span>-->
                 </div>
             </div>
+
+            <!--<div class="form-group">-->
+            <!--<label class="col-sm-2 control-label">Icon</label>-->
+            <!--<div class="col-sm-10">-->
+            <!--<span type="text" class="form-control" id="icon_span" th:value="${menu.icon}" style="margin: 0 auto">-->
+            <!--<span class="label label-default">-->
+            <!--<i th:class="${menu.icon}" style="width: 10px;height: 10px"></i>-->
+            <!--<i style="margin-left: 10px;display: none" class="fa fa-remove"></i>-->
+            <!--</span>-->
+            <!--</span>-->
+            <!--<input type="hidden" name="icon" class="form-control" id="icon" placeholder="Parent" th:value="${menu.icon}">-->
+
+            <!--</div>-->
+            <!--</div>-->
             <div class="form-group" th:inline="text">
                 <label class="col-sm-2 control-label">URL</label>
                 <div class="col-sm-10">
@@ -93,6 +138,18 @@
     </section>
 </div>
 <script type="text/javascript">
+    function openView(url) {
+
+        layer.open({
+            type: 2,
+            title: '选择',
+            area: ['400px', '500px'],
+            fixed: false, //不固定
+            maxmin: true,
+            content: url
+        });
+    }
+
     $("#submit").click(function () {
         layer.load();
         $.ajax({
