--- a/src/main/resources/templates/thymeleaf/menu/menuAdd.html
+++ b/src/main/resources/templates/thymeleaf/menu/menuAdd.html
@@ -101,17 +101,17 @@
     </section>
 </div>
 <script type="text/javascript">
-    function openView(url) {
-
-        layer.open({
-            type: 2,
-            title: '选择',
-            area: ['400px', '500px'],
-            fixed: false, //不固定
-            maxmin: true,
-            content: url
-        });
-    }
+    // function openView(url) {
+    //
+    //     layer.open({
+    //         type: 2,
+    //         title: '选择',
+    //         area: ['400px', '500px'],
+    //         fixed: false, //不固定
+    //         maxmin: true,
+    //         content: url
+    //     });
+    // }
 
 </script>
 
